--- a/F61 liwei/CSS/hemoxing.css
+++ b/F61 liwei/CSS/hemoxing.css
@@ -1,11 +1,45 @@
 /* article标签，定义了content的长宽，overflow功能 */
 article{
+    background-color:skyblue;
+    width:100px;
+    height:100px;
+    /* border:10px; */
+    padding: 10px 20px 30px 40px;
+    margin: 10px 20px 30px 40px;
+    /* border-top-color:green;
+    border-right-color:gold;
+    border-bottom-color:purple;
+    border-left-color:blue;
+    border-top-style:solid;
+    border-right-style:dotted;
+    border-bottom-style:dashed;
+    border-left-style: double;  */
+    border-top:solid; 
+    border-right: dotted gold;
+    border-bottom:30px dashed purple;
+    border-left:40px double  blue;
+    
+}
+section{
     width:120px;
     height:120px;
-    background-color:blue;
+    background-color: purple;
     /* overflow: hidden; */
     /* overflow:scroll; */
+    /* overflow:auto; */
+    border:20px solid skyblue;
+    /* display:none; */
+    padding: 10px 20px 30px 40px;
+    margin: 40px 20px 30px 40px;;
+    overflow:hidden;
+}
+header{
+    width:100%;
+    height:50px;
+    /* box-sizing:border-box; */
+    background-color:blue;
     overflow:auto;
-    border:2px solid red;
-    margin: 3px 4px ;
+    /* border-left:10px solid green; */
+    margin-left:10px;
+    
 }
